--- a/maintenancemode/templates/503.html
+++ b/maintenancemode/templates/503.html
@@ -18,7 +18,7 @@
         height: 80px;
         width: 100%;
         color: #1a1a1a;
-        text-align: left;
+        text-align: center;
         font-family: serif;
         padding: 0;
     }
