Making it look classier.

--- a/maintenancemode/templates/503.html
+++ b/maintenancemode/templates/503.html
@@ -9,7 +9,7 @@
         padding: 0;
     }
     body {
-        background-color: white;
+        background-color: #0e0e0e;
     }
     div.wrapper {
         position: fixed;
@@ -17,7 +17,7 @@
         margin-top: -50px;
         height: 80px;
         width: 100%;
-        color: #1a1a1a;
+        color: #efefef;
         text-align: center;
         font-family: serif;
         padding: 0;
